--- a/jupyter/government-digital-identity.ipynb
+++ b/jupyter/government-digital-identity.ipynb
@@ -125,15 +125,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import python data analysis library\n",
-    "import pandas as pd\n",
-    "\n",
-    "# pd.set_option('max_columns', 120)\n",
-    "# pd.set_option('max_rows', 20)"
+    "import pandas as pd"
    ]
   },
   {
